src/objects/MLN_Risk__c.object
<CustomObject>
    <description>MillimanGRC Risk Custom Object</description>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Mitigation_Cost__c</fullName>
        <label>Annual Mitigation Cost</label>
        <summarizedField>Risk_Mitigation_Relationship__c.Annual_Cost__c</summarizedField>
        <summaryForeignKey>Risk_Mitigation_Relationship__c.Risk__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <picklist>
            <picklistValues>
                <fullName>Physicians Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avoid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avoid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Synergy__c</fullName>
        <inlineHelpText>The potential for disruption/slowdown to the extended business process
if this risk triggers</inlineHelpText>
        <label>Business Synergy</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Low</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - High</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comments captured from the risk assessment surveys</description>
        <inlineHelpText>Comments captured from the risk assessment surveys</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Enter assessment comments for this risk</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Control_Effectiveness__c</fullName>
        <inlineHelpText>1 - Highly Effective, Controls operating effectively, policies are strictly followed, regular monitoring 
2 - Appropriate, Key controls in place, policies are generally followed, periodic review 
3 - Needs Improvement, Some controls in place, no review</inlineHelpText>
        <label>Control Effectiveness Level</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_effectiveness_level__c</fullName>
        <formula>IF (Control_Effectiveness__c &gt;= 2.7, &quot;Needs Improvement&quot;,
IF (Control_Effectiveness__c &gt;= 2.3, &quot;Appropriate to Needs Improvement&quot;,
IF (Control_Effectiveness__c &gt;= 1.9, &quot;Appropriate&quot;,
IF (Control_Effectiveness__c &gt;= 1.5, &quot;Appropriate to Highly Effective&quot;,
IF (Control_Effectiveness__c &gt;= 1, &quot;Highly Effective&quot;,  null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Control Effectiveness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Impact_Number__c</fullName>
        <label>Pre-Mitigation Impact Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Impact__c</fullName>
        <inlineHelpText>Please fill in the number which indicates the current risk impact level:
5 - Catastrophic, over $500M
4 - Major, $100M &lt; x &lt; $500M
3 - Moderate, $50M &lt; x &lt; $100M
2 - Minor, $10M &lt; x &lt; $50M
1 - Insignificant, $10M or less</inlineHelpText>
        <label>Current Impact Level</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Likelihood_Number__c</fullName>
        <label>Pre-Mitigation Likelihood Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Likelihood__c</fullName>
        <inlineHelpText>Please fill in the number which indicates the current risk likelihood level:
5 - Almost Certain, Once per year
4 - Likely, Once every 2 years 
3 - Possible, Once every 5 years 
2 - Unlikely, Once every 10 years 
1 - Rare, Once every 20 years or more</inlineHelpText>
        <label>Current Likelihood Level</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Loss__c</fullName>
        <inlineHelpText>Results come from Stochastic Risks Analysis ‘expected mean loss’ outputs and should be manually entered here.</inlineHelpText>
        <label>Current Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Impact_GUESS__c</fullName>
        <inlineHelpText>Insignificant- x&lt;$5M
Minor-$5M&lt;x&lt;$15M
Moderate-$15M&lt;x&lt;$25M
Major-$25M&lt;x&lt;$50M
Significant-x&gt;Over $50M</inlineHelpText>
        <label>Current Risk Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Insignificant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Impact_Value_GUESS__c</fullName>
        <formula>CASE(   Current_Risk_Impact_GUESS__c   , &quot;Significant&quot;, 5, &quot;Major&quot;, 4,&quot;Moderate&quot;,3,&quot;Minor&quot;, 2, &quot;Insignificant&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Risk Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Impact__c</fullName>
        <inlineHelpText>Insignificant- x&lt;$5M
Minor-$5M&lt;x&lt;$15M
Moderate-$15M&lt;x&lt;$25M
Major-$25M&lt;x&lt;$50M
Significant-x&gt;Over $50M</inlineHelpText>
        <label>Inherent Risk Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Insignificant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Significant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Level_GUESS__c</fullName>
        <formula>Current_Risk_Impact_Value_GUESS__c   *   Current_Risk_Likelihood_Number__c    -  Risk_Control_Effectiveness_Value_GUESS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Risk Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Likelihood_GUESS__c</fullName>
        <inlineHelpText>Rare-occur in 1 out of more than 20 years
Unlikely-occur in 1 out of 10 years
Possible-occur in 1 out of 5 years
Likely-occur in 1 out of 2 years
Almost certain-occur annually</inlineHelpText>
        <label>Current Risk Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost certain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Likelihood_Number__c</fullName>
        <formula>CASE(   Current_Risk_Likelihood_GUESS__c  , &quot;Almost certain&quot;, 5, &quot;Likely&quot;, 4,&quot;Possible&quot;, 3, &quot;Unlikely&quot;, 2, &quot;Rare&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Risk Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Likelihood__c</fullName>
        <inlineHelpText>Rare-occur in 1 out of more than 20 years 
Unlikely-occur in 1 out of 10 years 
Possible-occur in 1 out of 5 years 
Likely-occur in 1 out of 2 years 
Almost certain-occur annually</inlineHelpText>
        <label>Inherent Risk Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Almost Certain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Rating__c</fullName>
        <formula>CASE( Speed_to_Onset__c , &quot;5 - Almost Immediate&quot;, 5, &quot;4 - Fast&quot;, 4,&quot;3 - Moderate&quot;,3,&quot;2 - Slow&quot;, 2, &quot;1 - Very Slow&quot;, 1, 0)*0.10+CASE( Risk_Volatility__c , &quot;Unpredictable change over the next 3 years&quot;, 5, &quot;Severe change over the next 3 years&quot;, 4, &quot;Moderate change over the next 3 years&quot;, 3, &quot;Minor change over the next 3 years&quot;, 2, &quot;Static over the next 3 years&quot;, 1, 0)*0.10+CASE( Inherent_Risk_Trend__c , &quot;Decreasing&quot;, 1, &quot;Somewhat lower&quot;, 2, &quot;About the same&quot;, 3, &quot;Somewhat higher&quot;, 4, &quot;Increasing&quot;, 5, 0)*0.10 +  Inherent_Risk_Impact_Number__c  *0.25+ Inherent_Risk_Likelihood_Number__c *0.25+ Risk_Control_Effectiveness_Value__c *0.20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is automatically calculated as the weighted sum of elements :the current likelihood (25%), current impact (25%), Control Effectiveness(20%), speed to onset (10%), risk volatility (10%) and risk trend (10%)</inlineHelpText>
        <label>Risk Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_rank__c</fullName>
        <label>Current Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Brief description of this risk</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Owner__c</fullName>
        <inlineHelpText>Select the title of the Executive Owner</inlineHelpText>
        <label>Executive Owner</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources Officer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>Type in frequency of the risk in years. For example, if a risk happens once in 5 years, please type in 5 here. If a risk happens several times a year, type in 1 and the impact should be the estimated total loss in one year.</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Further_Action_Required__c</fullName>
        <formula>IF(ISPICKVAL( Risk_Tolerance__c , &quot;Low&quot;),IF(   Residual_Risk_Level__c    &gt; 5, true, false), 
IF(ISPICKVAL( Risk_Tolerance__c , &quot;Moderate&quot;),IF( Residual_Risk_Level__c &gt; 11, true, false), 
IF(ISPICKVAL( Risk_Tolerance__c , &quot;High&quot;),IF( Residual_Risk_Level__c &gt; 15, true, false),false)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Further Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Duration__c</fullName>
        <inlineHelpText>Please select how long the risk will have impact to the organization if the risk occurs</inlineHelpText>
        <label>Impact Duration</label>
        <picklist>
            <picklistValues>
                <fullName>0-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_description__c</fullName>
        <label>Impact Description</label>
        <length>25500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_level__c</fullName>
        <label>Impact Level</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_number__c</fullName>
        <formula>case(text( Impact_level__c ), &quot;H&quot;,3,&quot;M&quot;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherent_Impact_Maximum__c</fullName>
        <label>Pre-Mitigation Impact - Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inherent_Impact_Minimum__c</fullName>
        <label>Pre-Mitigation Impact - Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inherent_Impact_Most_Likely__c</fullName>
        <label>Pre-Mitigation Impact - Most Likely</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inherent_Probability__c</fullName>
        <inlineHelpText>Type in likelihood of the risk in years. For example, if a risk happens once in 5 years, please type in 5 here. If a risk happens several times a year, type in 1 and the impact should be the estimated total loss in one year.</inlineHelpText>
        <label>Pre-Mitigation Probability</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherent_Probability_of_Occurrence__c</fullName>
        <formula>1 /  Inherent_Probability__c</formula>
        <inlineHelpText>Automatically calculated by dividing 1 by the Pre-Mitigation Probability field value</inlineHelpText>
        <label>Pre-Mitigation Probability of Occurrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Impact_Number__c</fullName>
        <formula>CASE(  Current_Risk_Impact__c  , &quot;5 - Significant&quot;, 5, &quot;4 - Major&quot;, 4,&quot;3 - Moderate&quot;,3,&quot;2 - Minor&quot;, 2, &quot;1 - Insignificant&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherent Risk Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Likelihood_Number__c</fullName>
        <formula>CASE(  Current_Risk_Likelihood__c , &quot;5 - Almost Certain&quot;, 5, &quot;4 - Likely&quot;, 4,&quot;3 - Possible&quot;, 3, &quot;2 - Unlikely&quot;, 2, &quot;1 - Rare&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherent Risk Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Trend_Indicator__c</fullName>
        <formula>IMAGE(CASE( TEXT(Inherent_Risk_Trend__c) , 
&apos;5 - Increasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kr&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;4 - Somewhat higher&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kq&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;3 - About the same&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ks&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;2 - Somewhat lower&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kp&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 


&apos;1 - Decreasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ko&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 

&quot;/s.gif&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Displays a colored arrow based on the text selected in the Pre-Mitigation Risk Trend field. 
Can not be altered by user.</inlineHelpText>
        <label>Pre-Mitigation Risk Trend Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Trend__c</fullName>
        <inlineHelpText>-Decreasing - risk level is improving
-Somewhat lower - risk is improving but not dramatically
-About the same - no significant changes 
-Somewhat higher - risk is rising but not as significantly as &quot;Up&quot; 
-Increasing - risk is rising significantly</inlineHelpText>
        <label>Pre-Mitigation Risk Trend</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Decreasing</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat lower</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - About the same</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Somewhat higher</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Increasing</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>K_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The recording/communication of Risks in the 10-K or Annual Report is an effective and efficient method to inform stakeholders, such as investors, of the potential risks to the viability of the organization.</inlineHelpText>
        <label>10-K Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Risk_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Risk Metric</label>
        <referenceTo>Key_Risk_Metric__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Assessment_Date__c</fullName>
        <inlineHelpText>The date this risk was last assessed</inlineHelpText>
        <label>Last Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_year_s_rank__c</fullName>
        <label>Last Year&apos;s Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <inlineHelpText>Please fill in the likelihood that the risk will occur and the system will add the &apos;%&apos; sign to the number automatically. This data filed is calculated based on the &apos;Current likelihood level&apos; and will be updated by Milliman or designated staff at Ascension</inlineHelpText>
        <label>Likelihood</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Likelihood_level__c</fullName>
        <label>Likelihood Level</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_number__c</fullName>
        <formula>case(text(  Likelihood_level__c  ), &quot;H&quot;,3,&quot;M&quot;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Assessment_Date__c</fullName>
        <inlineHelpText>The date this risk will be assessed</inlineHelpText>
        <label>Next Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operational_Owner__c</fullName>
        <inlineHelpText>Enter the Operational Owner if applicable</inlineHelpText>
        <label>Operational Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgnization_Name__c</fullName>
        <label>Orgnization Name</label>
        <picklist>
            <picklistValues>
                <fullName>Costco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overdue_Days__c</fullName>
        <formula>IF(today()- Next_Assessment_Date__c &gt; 0, today()- Next_Assessment_Date__c, 0)</formula>
        <inlineHelpText>Displays the number of days that the assessment is late. Value is calculated by subtracting the number of days that have passed since Next Assessment Date.</inlineHelpText>
        <label>Overdue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Rick Nauman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Kinard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary-Lou Misrahy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rod Pierson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catherine Walberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alison Talbot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leslie Mallonee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Holm</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <inlineHelpText>Select the Organization Category</inlineHelpText>
        <label>Organization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Entitiy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitiy 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitiy 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitiy 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Mitigation_Expected_Loss__c</fullName>
        <inlineHelpText>Results come from Stochastic Risks Analysis ‘expected mean loss’ outputs and should be manually entered here.</inlineHelpText>
        <label>Post-Mitigation Expected Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Mitigation_Expected_Loss__c</fullName>
        <inlineHelpText>The expected loss amount is also the mean expected exposure. This is developed in Adaero software by a probability distribution based on the risk likelihood and impact assessment. This data will be updated by Milliman or designated staff at Ascension.</inlineHelpText>
        <label>Expected Loss</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preliminary_Expected_Loss__c</fullName>
        <formula>1</formula>
        <inlineHelpText>Field is calculated by the mean value of the selected Pre-Mitigation Impact multiplied by (1 / Pre-Mitigation Likelihood expected number of years)</inlineHelpText>
        <label>Preliminary Expected Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preparedness_Confidence_Level__c</fullName>
        <inlineHelpText>How company evaluate their response capability to manage this issue. Scale represents company&apos; confidence level.</inlineHelpText>
        <label>Preparedness Confidence Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Risk_Orientation__c</fullName>
        <inlineHelpText>Select the Primary Risk Orientation - Enterprise wide, corporate only or segment level.</inlineHelpText>
        <label>Primary Risk Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_No_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuarterlyReviewStatus?id=&apos;&amp;Id+&apos;&amp;status=Reviewed but no changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJK&apos;,&apos;Reviewed but no changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review No Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status_Track__c</fullName>
        <description>This field is used to track the changes to Quarterly Review Status value</description>
        <label>Quarterly Review Status Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status__c</fullName>
        <label>Quarterly Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed but no changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed with changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_With_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuarterlyReviewStatus?id=&apos;&amp;Id+&apos;&amp;status=Reviewed with changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJJ&apos;,&apos;Reviewed with changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review With Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relation_ship_to_component_of_financial__c</fullName>
        <inlineHelpText>I. Price Adequacy
II. Market Pressures
III. Declining Investment Income and Inflation
IV. Effects of Continued Implementation of the ACA
V. Tort and Judicial Environment</inlineHelpText>
        <label>Relationship to Financial Risk (MPL)</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residual_Likelihood__c</fullName>
        <inlineHelpText>Type in likelihood of the risk in years. For example, if a risk happens once in 5 years, please type in 5 here. If a risk happens several times a year, type in 1 and the impact should be the estimated total loss in one year.</inlineHelpText>
        <label>Post-Mitigation Probability</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_Maximum_Impact__c</fullName>
        <inlineHelpText>Enter the estimated maximum impact of this risk</inlineHelpText>
        <label>Post-Mitigation Impact - Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Minimum_Impact__c</fullName>
        <inlineHelpText>Enter the estimated minimum impact of this risk</inlineHelpText>
        <label>Post-Mitigation Impact - Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Most_Likely_Impact__c</fullName>
        <inlineHelpText>Enter the estimated most likely impact of this risk</inlineHelpText>
        <label>Post-Mitigation Impact - Most Likely</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Probability_of_Occurence__c</fullName>
        <formula>1 /  Residual_Likelihood__c</formula>
        <label>Post-Mitigation Probability of Occurence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residual_Risk_Level__c</fullName>
        <formula>Inherent_Risk_Impact_Number__c  *  Inherent_Risk_Likelihood_Number__c  -  Risk_Control_Effectiveness_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residual Risk Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>